--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,8 @@
     "motion": "^12.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.3",
     "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.11"
   },
